syntax = "proto3";

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;

}

message GetUserByIdRequest {
  string id = 1;
}

message RegisterUserRequest {
  User user = 1;
}

message UserResponse {
  User user = 1;
  string error = 2;
}

service UserService {
  rpc getUserById(GetUserByIdRequest) returns (UserResponse);
  rpc registerUser(RegisterUserRequest) returns (UserResponse);
}